# specification/swagger.yml
@@ -22,6 +22,9 @@ components:
         lname:
           type: string
           description: Last name of person to create
+        id:
+          type: string
+          description: ID Person
     PersonList:
       type: array
       items:
@@ -30,6 +33,8 @@ components:
           fname:
             type: string
           lname:
+            type: string
+          id:
             type: string
 
 paths:
@@ -85,7 +90,7 @@ paths:
               schema:
                 type: string
               description: Resource Location
-  /people/{lname}:
+  /people/{id}:
     delete:
       operationId: resources.people.remove
       tags:
@@ -93,7 +98,7 @@ paths:
       summary: Delete a person from the people list
       description: Delete a person
       parameters:
-        - name: lname
+        - name: id
           in: path
           schema:
             type: string
@@ -106,7 +111,7 @@ paths:
               schema:
                 type: string
     get:
-      operationId: resources.people.find_by_lname
+      operationId: resources.people.find_one
       tags:
         - people
       summary: Read one person from the people list
